# cli-old

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  spec-serial.json  spec.json
.github/buildomat/jobs/: build.sh
.github/workflows/: cargo-build-stable.yml  cargo-build.yml  cargo-clippy.yml  cargo-test.yml  check-illumos.sh  cross-deps.sh  generate-website-docs.yml  make-cross.yml  make-release.yml
cli-macro/: Cargo.toml
cli-macro-impl/: Cargo.toml
cli-macro-impl/src/: lib.rs
cli-macro-impl/tests/: tests.rs
cli-macro/src/: lib.rs
docs/: oxide.json
macros/: Cargo.toml
macros/impl/: Cargo.toml
macros/impl/src/: lib.rs
macros/impl/tests/: tests.rs
macros/src/: lib.rs  tests.rs
src/: cmd.rs  cmd_alias.rs  cmd_api.rs  cmd_auth.rs  cmd_completion.rs  cmd_config.rs  cmd_disk.rs  cmd_generate.rs  cmd_image.rs  cmd_image_global.rs  cmd_instance.rs  cmd_instance_serial.rs  cmd_open.rs  cmd_org.rs  cmd_project.rs  cmd_rack.rs  cmd_role.rs  cmd_route.rs  cmd_router.rs  cmd_sled.rs  cmd_snapshot.rs  cmd_ssh_key.rs  cmd_subnet.rs  cmd_update.rs  cmd_version.rs  cmd_vpc.rs  colors.rs  completion.rs  config.rs  config_alias.rs  config_file.rs  config_from_env.rs  config_from_file.rs  config_map.rs  context.rs  docs_man.rs  docs_markdown.rs  http.rs  iostreams.rs  main.rs  (+8 more)
tests/: omicron.toml
