[package]
name = "oxide"
version = "0.1.0-pre.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "^0.12.1"
anyhow = "1"
async-trait = "^0.1.52"
atty = "^0.2.14"
chrono = { version = "^0.4", features = ["serde"] }
chrono-humanize = "^0.2.1"
clap = { version = "^3.1.6", features = ["cargo", "derive", "env", "unicode"] }
clap_complete = { version = "^3.0.6" }
cli-macro = { path = "cli-macro" }
colored_json = "^2.1.0"
dialoguer = "^0.10.0"
dirs = "4"
heck = "^0.4.0"
http = "^0.2.6"
ipnetwork = "^0.18"
log = "=0.4.14"
regex = "1"
num-traits = "^0.2.14"
open = "^2.1.1"
oxide-api = "0.1.0-rc.28"
#oxide-api = { path= "../oxide.rs/oxide" }
pulldown-cmark = "^0.9.1"
pulldown-cmark-to-cmark = "^10.0.0"
reqwest = { version = "^0.11.9", default-features = false, features = ["json", "rustls-tls"] }
#roff = { version = "^0.2.1" }
# Fix once https://github.com/clap-rs/clap/pull/3174 is merged.
roff = { git = "https://github.com/sondr3/roff-rs", branch = "updates" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "^0.8"
shlex = "^1.1.0"
slog = "2"
slog-async = "2"
slog-scope = "4"
slog-stdlog = "4"
slog-term = "2"
tabwriter = "^1.2.1"
tabled = { version = "^0.5.0", features = ["color"] }
tempfile = "^3.3.0"
termbg = "^0.4.0"
terminal_size = "^0.1.17"
terminal-spinners = "^0.3.2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "^0.5.8"
toml_edit = "^0.13.4"
uuid = { version = "^0.8", features = ["serde", "v4"] }
version-compare = "^0.1.0"

[dev-dependencies]
futures = "0.3"
pretty_assertions = "1"
test-context = "^0.1.3"

[workspace]
members = [
  "cli-macro",
  "cli-macro-impl",
]
